[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/objects/coffee.png" type="Texture" id=1]
[ext_resource path="res://scr/objects/Coffee.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/coffee_grab.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/objects/coffee_sip.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 13.2752

[sub_resource type="Animation" id=8]
resource_name = "destroy"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.46229, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Coffee" type="Area2D"]
collision_layer = 2147483656
script = ExtResource( 2 )

[node name="coffee" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 8 )

[node name="coffee_grab" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 1.2
max_distance = 200.0
bus = "Effects"

[node name="coffee_sip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 20.0
bus = "Effects"

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.35355, -13.2583 )
scale = Vector2( 1.56569, 1.56569 )
process_parent = true
physics_process_parent = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
